# sokuji-tsuyaku-api

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_SUMMARY.md  README.md  TRANSLATION_GUIDE.md  pyproject.toml
docs/: ctranslate2-cudnn-fix.md
examples/: translation_example.py
examples/javascript/: package-lock.json
src/speaches/: api_types.py  audio.py  config.py  dependencies.py  hf_utils.py  main.py  text_utils.py  utils.py
src/speaches/executors/: kokoro.py  marian.py  nllb.py  parakeet.py  piper.py  pyannote.py  silero_vad_v5.py  whisper.py
src/speaches/executors/shared/: executor.py  handler_protocol.py  registry.py
src/speaches/realtime/: chat_utils.py  context.py  conversation_event_router.py  input_audio_buffer_event_router.py  response_event_router.py  session.py  session_event_router.py  utils.py
src/speaches/realtime/rtc/: audio_stream_track.py
src/speaches/routers/: misc.py  realtime_rtc.py  realtime_ws.py  speech.py  speech_embedding.py  stt.py  translations.py  utils.py  vad.py
src/speaches/routers/realtime/: rtc.py
src/speaches/types/: realtime.py
src/speaches/ui/: app.py
src/speaches/ui/tabs/: translation.py
tests/: api_translation_test.py  conftest.py  realtime_api_test.py
